
ENGINE:
	- Added support for Apache 2.4.x branch
	- Added database connection timeout (3 seconds)
	- Added MySQL transaction routines
	- Fixed: MySQL server has gone away
	- Fixed: Plugin module is broken: Unable to disable, uninstall... any plugin
	- Fixed: Plugin update must be triggered when plugin configuration is updated

GUI:
	- Fixed: Allow to share domain_dns table between several components (core, plugins..)
	- Fixed: Plugin update must be triggered when plugin configuration is updated
	- Fixed: Unable to delete plugin in some contexts
	- Updated plugin API

Tickets:
	- Fixed #579: Review - i18n issues
	- Fixed #745: Defect - Disk detail in dovecot doesn't include aliases
	- Fixed #779: Defect - When migrating from ispcp the reseller and admin logos are lost
	- Fixed #791: Defect - Unable to change customer IP
	- Fixed #834: Cosmetics - Ticket system menu names
	- Fixed #835: Task - Migration script - ispCP - Remove old php5-fcgi-starter
	- Fixed #838: Bug - Installer skips PHP INI Level dialog for apache fcgi
	- Fixed #852: Bug - Software installer - Unable to install any software
	- Fixed #858: Task - Remove php5-adodb package
	- Fixed #861: Bug - SQLSTATE[42000]: Syntax error or access violation
	- Fixed #867: Security issue - SSL - When exporting a private key, the password must not be visible from system utilities
	- Fixed #870: Bug - Error indicator for new tickets
	- Fixed #876: Review - Installer - Wildcard should be allowed as part of SQL user hostname

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc3
------------------------------------------------------------------------------------------------------------------------

2013-07-23: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc3

CONFIGS:
	- Removed Amavis, ClamAV and SpamAssassin configuration (Such service must be provided as plugin)

ENGINE:
	- Added config_readonly option in bootstrap